# lzt-api

./: README.md  pyproject.toml
codegen/: generate.py  parser.py
codegen/templates/: client.py.j2  models.py.j2
src/lzt_api/: __init__.py  client.py  exceptions.py
src/lzt_api/forum/: __init__.py  client.py  models.py
src/lzt_api/market/: __init__.py  client.py  models.py
tests/: test_client.py
