[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lzt-api"
version = "0.1.0"
description = "Python API wrapper for Lolzteam Forum & Market"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "jinja2>=3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]
